--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 		<footer class="site-footer">
 			<small>
-				This is the site footer
+				This is the site footer.
 			</small>
 		</footer>
-	<script src="{{ page.relative}}site_assets/js/main.min.js"></script>
+	<script src="{{ page.relative}}site_assets/js/main.js"></script>
 	</body>
 </html>
