--- a/development/scss/base/_b-base.scss
+++ b/development/scss/base/_b-base.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-	background: white;
+	background: yellow;
 	font-family: sans-serif;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
